# aika-rs

./: Cargo.toml  README.md
.github/workflows/: cargo-check.yaml  cargo-fmt.yaml  cargo-test.yaml  ci.yaml
contrib/: config.toml
src/: claude.rs  config.rs  input.rs  main.rs  mistral.rs  openai.rs  output.rs  provider.rs  repl.rs
