[package]
name = "aika-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aika"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
ureq = { version = "3.1.2", features = ["json"] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.23.0"
